Ok, I think it synced up.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>My Astro Site </h1>
+		<h1>My Astro Site</h1>
+		<p>Just adding some text here to see what it looks like.</p>
 	</body>
 </html>
