Adding a blog page, because why not?

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,10 +11,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		        <a href="/">Home</a>
+                <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href="/blog/">Blog</a>
-		<h1>My Astro Site</h1>
-		<p>You shouldn't be here.  This is just me following one of the Astro tutorials.</p>
+		<h1>Blog Page</h1>
+		<p>Ok, in theory the blog goes here.  I'm not yet clear what that will actually look like, but I'm game to follow the tutorial.</p>
 	</body>
 </html>
