--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,5 +16,12 @@
 <a href="/blog/">Blog</a>
 		<h1>Blog Page</h1>
 		<p>Ok, in theory the blog goes here.  I'm not yet clear what that will actually look like, but I'm game to follow the tutorial.</p>
+
+        <p>Ok, actualy blog posts, albeit in a very manual fashion</p>
+            <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+        <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
 	</body>
 </html>
