Through Unit 6 - RSS feed is may be up?

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
-
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -14,23 +15,12 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const happy = true;
 const finished = false;
 const goal = 3;
----
+const skillColor = "#F5A2A2"; 
+
 
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-    <title>{pageTitle}</title>
-	</head>
-	<body>
-        <a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
-
+<BaseLayout pageTitle={pageTitle}>
+  <main>
     <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
@@ -44,7 +34,7 @@ const goal = 3;
 
 <p>Ok, apparently you can map a list?  Like so</p>
 <ul>
-  {skills.map((skill) => <li>{skill}</li>)}</ul>
+  {skills.map((skill) => <li class="skill">{skill}</li>)}</ul>
 
   <p>Can I pull out a list item? {skills[1]}</p>
   <p>I can!  Noice!</p>
@@ -69,5 +59,11 @@ const goal = 3;
         variable === value ? output     Checks for a value, outputs if correct
     </pre>
 </p>
-	</body>
-</html>
+<p> Ok, almost tripped up on the <pre>  style define:vars={{skillColor}}</pre> bit</p>
+<p>For future ref, the <a href="https://docs.astro.build/en/guides/styling/#css-variables">page on css variables</a> is here.</p>
+
+<p>Dagnabbit, I know I saw a way to fold variables into a minor template item. Oh, right: Components! </p>
+</main>
+</BaseLayout>
+
+
