--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -153,3 +153,12 @@ nav {
   font-size: 1.15em;
   background-color: #f8fcfd;
 }
+
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
