--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 ---
 import Navigation from './Navigation.astro';
 import Hamburger from './Hamburger.astro';
+import ThemeIcon from './ThemeIcon.astro';
+
 
 ---
 
@@ -8,5 +10,7 @@ import Hamburger from './Hamburger.astro';
     <nav>
     <Hamburger />
     <Navigation />
+        <ThemeIcon />
+
     </nav>
 </header>
